[tool.poetry]
name = "vector-db-benchmark"
version = "0.0.1"
description = "fork from qdrant/vector-db-benchmark"
authors = ["mochix <mochix@moqi.ai>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
qdrant-client = "^0.11.4"
typer = "^0.6.1"
jsons = "^1.6.3"
h5py = "^3.7.0"
weaviate-client = "^3.6.0"
elasticsearch = "^8.4.3"
pymilvus = "^2.2.0"
protobuf = "3.20.0"
redis = "^4.3.4"
ipdb = "^0.13.9"
stopit = "^1.1.2"
opensearch-py = "^2.2.0"
weaviate-cli = "^2.1.3"
weaviate-client = "^3.15.4"
pinecone-client = "^2.2.1"
clickhouse-connect = "^0.5.19"
cos-python-sdk-v5 = "^1.9.23"




[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"